--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 stripe.secret.key=YOUR_SECRET_API_KEY
 
-bot.name=CarSharingNotifBot
-bot.token=5901088534:AAGcKGBPuTDnZ-ryt8EyR5ER0d29C904BRk
+bot.name=YOUT_BOT_NAME
+bot.token=YOUR_TOKEN
+
+bot.chatId=YOUR_CHAT_ID
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=YOUR_URL
+spring.datasource.username=YOUR_USERNAME
+spring.datasource.password=YOUR_PASSWORD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 
