--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ stripe.secret.key=YOUR_SECRET_API_KEY
 bot.name=CarSharingNotifBot
 bot.token=5901088534:AAGcKGBPuTDnZ-ryt8EyR5ER0d29C904BRk
 
-
+stripe.success.url=/success
+stripe.cancel.url=/cancel
 
