added User entity, service, controller and security + jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/car-sharing-service?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
+
 stripe.secret.key=YOUR_SECRET_API_KEY
 
 bot.name=CarSharingNotifBot
