--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,5 +2,8 @@ databaseChangeLog:
   - include:
       file: /db/changelog/changes/create-users-table.sql
   - include:
+      file: /db/changelog/changes/create-cars-table.sql
+  - include:
+      file: /db/changelog/changes/create-rentals-table.sql
+  - include:
       file: /db/changelog/changes/create-payments-table.sql
-      
