--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/car-sharing-service?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
-
 stripe.secret.key=YOUR_SECRET_API_KEY
 
+bot.name=CarSharingNotifBot
+bot.token=5901088534:AAEXT-Qkpu5V4_GD5GFQDlsLkZDEzMPSR-s
 
-bot.name=YOUT_BOT_NAME
-bot.token=YOUR_TOKEN
-
-bot.chatId=YOUR_CHAT_ID
+bot.chatId=509114006
 
 stripe.success.url=/success
 stripe.cancel.url=/cancel
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=YOUR_URL
-spring.datasource.username=YOUR_USERNAME
-spring.datasource.password=YOUR_PASSWORD
+spring.datasource.url=jdbc:mysql://localhost:3306/car_sharing
+spring.datasource.username=root
+spring.datasource.password=121Silver121!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
