1. added init-users-table.sql 2. refactor SecurityConfig (access endpoints) 3. refactor UserRequestDto (deleted field Role) 4. added endpoint users/{id}/role in UserController

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: /db/changelog/changes/create-rentals-table.sql
   - include:
       file: /db/changelog/changes/create-payments-table.sql
+  - include:
+      file: /db/changelog/changes/init-users-table.sql
