added sending notification to user with overdued rental

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ bot.token=5901088534:AAEXT-Qkpu5V4_GD5GFQDlsLkZDEzMPSR-s
 
 stripe.success.url=/success
 stripe.cancel.url=/cancel
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
