added Rental List & Detail endpoint (#23)
* added methods to RentalController, fixed small checkstyle problems

* rental cannot be returned twice or negative inventory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ stripe.secret.key=YOUR_SECRET_API_KEY
 bot.name=CarSharingNotifBot
 bot.token=5901088534:AAEXT-Qkpu5V4_GD5GFQDlsLkZDEzMPSR-s
 
+bot.chatId=YOUR_CHAT_ID
+
 stripe.success.url=/success
 stripe.cancel.url=/cancel
 
