--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/car-sharing-service?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=CopyPaster258
+spring.datasource.url=YOUR_URL
+spring.datasource.username=YOUR_USERNAME
+spring.datasource.password=YOUR_PASSWORD
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
