--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=123456
-MYSQLDB_DATABASE=car-sharing
+MYSQLDB_DATABASE=YOUR_DATABASE_NAME
+MYSQLDB_ROOT_PASSWORD=YOUR_PASSWORD
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 
@@ -8,4 +8,6 @@ SPRING_LOCAL_PORT=6868
 SPRING_DOCKER_PORT=8080
 DEBUG_PORT=5005
 
-stripe.secret.key=YOUR_SECRET_API_KEY
+BOT_NAME=YOUR_BOT_NAME
+BOT_TOKEN=YOUR_TOKEN
+STRIPE_SECRET_KEY=YOUR_SECRET_KEY
