--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,15 @@ services:
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
-      - $DEBUG_PORT:$DEBUG_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
-        "spring.jpa.hibernate.ddl-auto" : "create-drop",
-        "telegram.bot.name" : "${BOT_NAME}",
-        "telegram.bot.token" : "${BOT_TOKEN}",
-        "STRIPE_SECRET_KEY" : "${STRIPE_SECRET_KEY}"
+              "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC",
+              "spring.datasource.username" : "$MYSQLDB_USER",
+              "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+              "spring.liquibase.enabled" : "true",
+              "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
+              "spring.jpa.hibernate.ddl-auto" : "validate",
+              "telegram.bot.name" : "${BOT_NAME}",
+              "telegram.bot.token" : "${BOT_TOKEN}",
+              "STRIPE_SECRET_KEY" : "${STRIPE_SECRET_KEY}"
       }'
-      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
