--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,15 @@ services:
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+    healthcheck:
+      test: "mysql -u${MYSQLDB_USER} -p${MYSQLDB_ROOT_PASSWORD} ${MYSQLDB_DATABASE}"
+      interval: 5s
+      timeout: 1s
+      retries: 20
   app:
     depends_on:
-      - mysqldb
+      mysqldb:
+        condition: service_healthy
     restart: on-failure
     image: car-sharing/docker-app
     build: .
@@ -22,13 +28,13 @@ services:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-              "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC",
-              "spring.datasource.username" : "$MYSQLDB_USER",
-              "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-              "spring.liquibase.enabled" : "true",
-              "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
-              "spring.jpa.hibernate.ddl-auto" : "validate",
-              "telegram.bot.name" : "${BOT_NAME}",
-              "telegram.bot.token" : "${BOT_TOKEN}",
-              "STRIPE_SECRET_KEY" : "${STRIPE_SECRET_KEY}"
+            "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC",
+            "spring.datasource.username" : "$MYSQLDB_USER",
+            "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+            "spring.liquibase.enabled" : "true",
+            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
+            "spring.jpa.hibernate.ddl-auto" : "validate",
+            "telegram.bot.name" : "${BOT_NAME}",
+            "telegram.bot.token" : "${BOT_TOKEN}",
+            "STRIPE_SECRET_KEY" : "${STRIPE_SECRET_KEY}"
       }'
